fix navbar collapse breakpoint media query to 1331px

--- a/css/lacaleta.css
+++ b/css/lacaleta.css
@@ -150,7 +150,7 @@ iframe {
        min-height: 240px;
    }
 }
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 768px) and (max-width: 1332px) {
   .navbar-header {
       float: none;
   }
